# phytium-mci

./: .gitignore  Cargo.toml
docs/: .$fsdif.drawio.bkp  .$state.drawio.bkp  .$state_1.8V.drawio.bkp  fsdif.drawio  sd_write_blocks.drawio  state.drawio  state_1.8V.drawio  飞腾派SDMMC开发.md
frimware/: phytium.dtb
src/: lib.rs  regs.rs  tools.rs
src/iopad/: constants.rs  err.rs  mod.rs  regs.rs
src/mci/: constants.rs  err.rs  mci_cid.rs  mci_config.rs  mci_csd.rs  mci_scr.rs  mci_status.rs  mci_timing.rs  mod.rs  regs.rs  sd_reg.rs
src/python/: code_gen_xreg0.py  code_gen_xreg1.py  input_xreg0.rs  input_xreg1.rs  output_xreg0.rs  output_xreg1.rs  temp.py  temp_marco.rs
tests/: example.rs  test.rs
